--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ftassara.courseraunam_datosusuario">
+    package="com.bojorque_anabel.mascotas_favoritas">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.bojorque_anabel.mascotas_favoritas.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +18,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetalleContacto"
-            android:parentActivityName=".MainActivity" />
+            android:name="com.bojorque_anabel.mascotas_favoritas.DetalleContacto"
+            android:parentActivityName="com.bojorque_anabel.mascotas_favoritas.MainActivity" />
         <activity
-            android:name=".FavoritosActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name="com.bojorque_anabel.mascotas_favoritas.FavoritosActivity"
+            android:parentActivityName="com.bojorque_anabel.mascotas_favoritas.MainActivity" />
 
 
     </application>
